# wavefront-c

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  conanfile.py  conanfile.py.bak  conanfile.txt  x.sh
examples/: CMakeLists.txt  loader.c
include/: log.h  wavefront.h
src/: lib.c  lib.h  log.c  mtl_parser.c  mtl_parser.h  obj_parser.c  obj_parser.h  wavefront.c  wavefront_private.h
test_data/: cube.mtl
tests/: CMakeLists.txt  test_wavefront.c
tests/test_data/cube/: cube.mtl
